--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">Serviço</label>
-                            <select id="servicoVenda" class="form-select" required onchange="atualizarTipoComissao()">
+                            <select id="servicoVenda" class="form-select" required>
                                 <option value="">Selecione um serviço</option>
                                 <!-- As opções serão preenchidas dinamicamente via JavaScript -->
                             </select>
@@ -299,7 +299,6 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">Comissão</label>
-                            <small id="tipoComissaoInfo" class="form-text"></small>
                             <input type="text" id="comissao" class="form-input" placeholder="0,00" required oninput="formatarComissao(this)">
                         </div>
                         <button type="submit" class="btn btn-primary">Registrar Venda</button>
@@ -460,6 +459,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.24/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script> <!-- Adicionado defer aqui -->
 </body>
 </html>
