--- a/index.html
+++ b/index.html
@@ -423,29 +423,32 @@
                         <button class="btn btn-primary" onclick="filtrarRelatorio()">Gerar</button>
                         <button id="btnLimparFiltros" class="btn btn-secondary" onclick="limparFiltros()">Limpar Filtros</button>
                     </div>
-                    <table id="tabelaRelatorio">
-                        <thead>
-                            <tr>
-                                <th>Data da Venda</th>
-                                <th>ID da Venda</th>
-                                <th>Nome do Vendedor</th>
-                                <th>Serviço Vendido</th>
-                                <th>Tipo de Comissão</th>
-                                <th>Nome do Cliente</th>
-                                <th>Empresa Parceira</th>
-                                <th>Valor da Venda</th>
-                                <th>Valor Bruto a Receber</th>
-                                <th>Valor da Comissão</th>
-                                <th>Variável da Comissão</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- As linhas da tabela serão preenchidas dinamicamente via JavaScript -->
-                        </tbody>
-                        <tfoot>
-                            <!-- O rodapé será preenchido dinamicamente via JavaScript -->
-                        </tfoot>
-                    </table>
+                  <table id="tabelaRelatorio">
+    <thead>
+        <tr>
+            <th>Data da Venda</th>
+            <th>ID da Venda</th>
+            <th>Nome do Vendedor</th>
+            <th>Serviço Vendido</th>
+            <th>Tipo de Comissão</th>
+            <th>Nome do Cliente</th>
+            <th>Empresa Parceira</th>
+            <th data-tipo="monetario">Valor da Venda</th>
+            <th data-tipo="monetario">Valor Bruto a Receber</th>
+            <th data-tipo="monetario">Valor da Comissão</th>
+            <th>Variável da Comissão</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- O conteúdo será preenchido dinamicamente pelo JavaScript -->
+    </tbody>
+    <tfoot>
+        <tr>
+            <!-- Os totais serão preenchidos dinamicamente pelo JavaScript -->
+        </tr>
+    </tfoot>
+</table>
+
                     <div class="mt-3">
                         <button class="btn btn-secondary" onclick="exportarRelatorioExcel()">Exportar Excel</button>
                         <button class="btn btn-secondary" onclick="exportarRelatorioPDF()">Exportar PDF</button>
