--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         <button class="btn btn-primary" onclick="filtrarRelatorio()">Gerar</button>
                         <button id="btnLimparFiltros" class="btn btn-secondary" onclick="limparFiltros()">Limpar Filtros</button>
                     </div>
- <table id="tabelaRelatorio">
+<table id="tabelaRelatorio">
     <thead>
         <tr>
             <th data-tipo="texto">Data da Venda</th>
@@ -439,11 +439,9 @@
             <th data-tipo="texto">Variável da Comissão</th>
         </tr>
     </thead>
-    <tbody>
-    </tbody>
+    <tbody></tbody>
     <tfoot>
-        <tr>
-        </tr>
+        <tr></tr>
     </tfoot>
 </table>
 
