--- a/index.html
+++ b/index.html
@@ -487,5 +487,7 @@
         }
     </script>
     <script src="scripts.js" defer></script>
+    <script src="verificacoes.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
