--- a/index.html
+++ b/index.html
@@ -486,8 +486,11 @@
             filtrarRelatorio();
         }
     </script>
-    <script src="scripts.js" defer></script>
-    <script src="verificacoes.js"></script>
+<script src="scripts.js" defer></script>
+<script src="verificacoes.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="verificacoes.js"></script>
 <script src="scripts.js"></script>
 </body>
 </html>
