--- a/index.html
+++ b/index.html
@@ -430,6 +430,28 @@
         </div>
         <!-- Tab Relatórios -->
         <div id="relatoriosTab" class="tab-content">
+             <h2>Relatório de Vendas</h2>
+    <select id="filtroColunas" multiple></select> <!-- Adicione esta linha -->
+    <table id="tabelaRelatorio">
+        <thead>
+            <tr>
+                <th>Data da Venda</th>
+                <th>ID da Venda</th>
+                <th>Nome do Vendedor</th>
+                <th>Serviço Vendido</th>
+                <th>Tipo de Comissão</th>
+                <th>Nome do Cliente</th>
+                <th>Empresa Parceira</th>
+                <th>Valor da Venda</th>
+                <th>Valor Bruto a Receber</th>
+                <th>Valor da Comissão</th>
+                <th>Variável da Comissão</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+        <tfoot></tfoot>
+    </table>
+</div>
             <div class="card">
                 <div class="card-header">
                     <h3 class="card-title">Relatório de Vendas</h3>
