--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <button class="nav-button" onclick="showTab('cadastros')">Cadastros</button>
                 <button class="nav-button" onclick="showTab('vendas')">Vendas</button>
                 <button class="nav-button" onclick="showTab('relatorios')">Relatórios</button>
+                <button onclick="showTab('relatoriosTab')">Abrir Relatórios</button>
+
             </nav>
         </header>
 
