--- a/index.html
+++ b/index.html
@@ -363,6 +363,18 @@
             </div>
         </div>
 
+<div class="row mb-3">
+    <div class="col-md-2">
+        <label for="itensPorPaginaVendas">Itens por página:</label>
+        <select class="form-control" id="itensPorPaginaVendas">
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="50">50</option>
+        </select>
+    </div>
+</div>
+        
         <!-- Tabela de Vendas -->
         <div class="table-responsive">
             <table class="table table-striped" id="tabelaVendas">
@@ -383,10 +395,11 @@
                 <tbody></tbody>
             </table>
         </div>
-
+        
         <!-- Paginação -->
         <div class="d-flex justify-content-between align-items-center mt-3">
-            <div id="controlesPaginacao"></div>
+    <div id="controlesPaginacaoVendas"></div>
+</div>
         </div>
     </div>
 </div>
