--- a/index.html
+++ b/index.html
@@ -308,7 +308,6 @@
             </div>
 
           <!-- Seção de Listagem de Vendas -->
-<!-- Seção de Listagem de Vendas -->
 <div class="card mb-4">
     <div class="card-header">
         <h5 class="mb-0">Listagem de Vendas</h5>
@@ -347,7 +346,7 @@
                 </select>
             </div>
         </div>
-        
+
         <!-- Botões e Itens por Página -->
         <div class="row mb-3">
             <div class="col-md-2">
@@ -355,7 +354,7 @@
             </div>
             <div class="col-md-2">
                 <label for="itensPorPaginaVendas">Itens por página:</label>
-                <select class="form-control" id="itensPorPaginaVendas" onchange="filtrarVendas()">
+                <select class="form-control" id="itensPorPaginaVendas">
                     <option value="5">5</option>
                     <option value="10">10</option>
                     <option value="20">20</option>
@@ -364,7 +363,7 @@
             </div>
         </div>
 
-        <!-- Tabela de Vendas -->
+        <!-- Tabela -->
         <div class="table-responsive">
             <table class="table table-striped" id="tabelaVendas">
                 <thead>
