--- a/index.html
+++ b/index.html
@@ -311,10 +311,6 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Listagem de Vendas</h2>
-                    <div>
-                        <button class="btn btn-secondary" onclick="exportarVendasExcel()">Exportar Excel</button>
-                        <button class="btn btn-secondary" onclick="exportarVendasPDF()">Exportar PDF</button>
-                    </div>
                 </div>
                 <div class="card-body">
                     <div class="filters">
@@ -376,11 +372,16 @@
                             <!-- As linhas serão preenchidas dinamicamente via JavaScript -->
                         </tbody>
                     </table>
-                    <div id="controlesPaginacaoVendas" class="d-flex justify-content-between align-items-center mt-3"></div>
-                </div>
-            </div>
+                   <div id="controlesPaginacaoVendas" class="d-flex justify-content-between align-items-center mt-3">
+        <button class="btn btn-secondary" onclick="mudarPaginaVendas(-1)">Anterior</button>
+        <span>Página 1 de 1</span>
+        <button class="btn btn-secondary" onclick="mudarPaginaVendas(1)">Próxima</button>
+        <div>
+            <button class="btn btn-secondary" onclick="exportarVendasExcel()">Exportar Excel</button>
+            <button class="btn btn-secondary" onclick="exportarVendasPDF()">Exportar PDF</button>
         </div>
-
+    </div>
+</div>
         <!-- Relatórios -->
         <div id="relatorios" class="tab-content">
             <div class="card">
